test/Fail/Issue998c.err
Issue998c.agda:5.9-10: error: [UnequalTerms]
A !=< Issue998c.A
when checking that the expression a has type A
